UHG2EM-320 Basic HTML Formatting - Long text in show/hide links is not wrapping causing fixed width tables to expand and forcing horizontal scroll in content in REST Widget.
git-svn-id: https://drive.kana.com/SVN/UHG/IQ/KMRestAPI@3098 b552034e-f646-462b-9072-8d94b4fb3fa1

--- a/ContentServices/src/main/webapp/css/content.css
+++ b/ContentServices/src/main/webapp/css/content.css
@@ -704,6 +704,12 @@ table {
 	margin-top: -40px;
 }
 
+.mce-item-table {
+	width:100%;
+    table-layout:fixed;
+}
+
+
 /* Media Queries */
 @media screen and (min-width: 1025px) {
 	.content_header_mobile {
